--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
      <string name="menu_favorites">我的收藏</string>
     <string name="menu_remind">播放提醒</string>
     <string name="menu_history">播放历史</string>
+    <string name="favorites">收藏</string>
     
     
     <!--vitamio  -->
