--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,9 +2,11 @@
 <resources>
 
     <string name="app_name">OneTv</string>
-     <string name="common_empty">暂无数据！</string>
+ 	<string name="common_empty">暂无数据！</string>
+    <string name="common_retry">获取数据失败,重试！</string>
     <string name="common_error">很抱歉，暂时无法获取相关数据!</string>
-    <string name="common_loading">加载中...</string>
+    <string name="common_loading">加载中&#8230;</string>
+    <string name="common_loading_more">正在加载更多&#8230;</string>
     <string name="menu_station">电视台</string>
      <string name="menu_favorites">我的收藏</string>
     <string name="menu_remind">播放提醒</string>
